# mc-bot

./: .env.example  .gitignore  Cargo.toml  run.sh
src/: db.rs  main.rs  utils.rs
