[package]
name = "mcbot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
anyhow = "1.0.95"
bevy_ecs = "0.15.0"
rand = "0.8.5"
sha256 = "1.5.0"
tokio = { version = "1.42.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
regex = "1.11"
lazy-regex = "3.4.1"
bevy_app = "0.15.0"
azalea = { git = "https://github.com/azalea-rs/azalea", version = "0.11.0" }
